--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,6 @@ edition = "2021"
 rocket = {version = "0.5.0-rc.2", features=["json"]}
 serde_json = "1.0"
 serde = "1.0.139"
-redis = "0.21.5"
+redis = {version = "0.21.5", features = ["tls"]}
 harsh = "0.2.1"
+dotenv = "0.15.0"
